# deltoid

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
deltoid/: Cargo.toml
deltoid-derive/: Cargo.toml
deltoid-derive/src/: desc.rs  error.rs  lib.rs
deltoid-derive/tests/: delta.rs  std__rc.rs  std__sync.rs  std__sync__rwlock.rs
deltoid-quickcheck-tests/: Cargo.toml
deltoid-quickcheck-tests/src/: main.rs
deltoid/src/: arrays.rs  borrow.rs  boxed.rs  convert.rs  core.rs  error.rs  lib.rs  option.rs  range.rs  rc.rs  result.rs  snapshot.rs  string.rs  tuple.rs  vec.rs
deltoid/src/collections/: btreemap.rs  btreeset.rs  hashmap.rs  hashset.rs  mod.rs  vecdeque.rs
deltoid/src/snapshot/: core.rs  delta.rs  full.rs  mod.rs
deltoid/src/sync/: arc.rs  rwlock.rs
struct-delta-derive/: Cargo.toml
struct-delta-derive/src/: desc.rs  error.rs  lib.rs
struct-delta-derive/tests/: delta.rs  std__sync__rwlock.rs
struct-delta-trait/: Cargo.toml
struct-delta-trait/src/: boxed.rs  error.rs  heap.rs  lib.rs  option.rs  range.rs  rc.rs  string.rs  tuple.rs  vec.rs
struct-delta-trait/src/collections/: btreemap.rs  hashmap.rs
struct-delta-trait/src/sync/: arc.rs  mod.rs  rwlock.rs
