[package]
name = "deltoid-derive"
version = "0.7.1"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
edition = "2018"
description = "Derive macro that generates code to calculate and apply deltas to structs and enums"
repository = "https://github.com/jjpe/deltoid"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltoid = "0.7"
itertools = "0.9"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_derive = "1.0"
syn = { version = "1.0", features = ["extra-traits", "parsing"] }

[dev-dependencies]
serde_json = "1.0"

[lib]
proc-macro = true

[features]
dump-expansions--unstable  = [] # Write generated expansions to files.
print-expansions--unstable = [] # Print generated expansions to stdout.
