[package]
name = "deltoid-quickcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltoid = { path = "../deltoid" }
deltoid-derive = { path = "../deltoid-derive" }
serde_derive = "1.0"
serde = "1.0"
quickcheck = "0.8"
quickcheck_macros = "0.8"
quickcheck_derive = "*"
rand = "0.6"
