[package]
name = "deltoid-quickcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltoid = { path = "../deltoid" }
deltoid-derive = { path = "../deltoid-derive" }
serde_derive = "1.0"
serde = "1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
quickcheck_derive = "0.3.0"
rand = "0.8.5"
