[package]
name = "deltoid"
version = "0.1.0"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
snapshot = ["chrono"]
