[package]
name = "deltoid"
version = "0.2.2"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
edition = "2018"
description = "A library to calculate and apply deltas to structs and enums"
repository = "https://github.com/jjpe/deltoid"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"

[features]
snapshot = ["chrono"]
