[package]
name = "struct-delta-derive"
version = "0.1.0"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
edition = "2018"
description = "Derive infrastructure to calculate and apply deltas at the struct level."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_derive = "1.0"
struct-delta-trait = { path = "../struct-delta-trait" }
syn = { version = "1.0", features = ["extra-traits"] }

[dev-dependencies]
serde_json = "1.0"

[lib]
proc-macro = true
